# writing-agent

./: .env.example  .gitattributes  .gitignore  DESIGN.md  README.md  package.json  skills-lock.json  tools.yaml.example
agent/: README.md  config.py  connection.py  edit_group_service.py  edit_group_store.py  edit_groups.py  fake_model.py  handler.py  main.py  memory_store.py  model_factory.py  model_manager.py  plugin_scanner.py  project_root.py  protocol.py  pyproject.toml  reference_check.py  review_handlers.py  session_store.py  session_title.py  storage.py  strands_community_tools.py  strands_file_read_adapter.py  strands_runner.py  stream_events.py  subagent_manager.py  subagents.py  tool_manager.py  workspace_context.py  writing_plugin.py  writing_tools.py
agent/evals/: __init__.py  runner.py
agent/scripts/: agent_chat.py  check_references.py  live_smoke.py  ws_smoke.py
agent/tests/: conftest.py  fakes.py  test_agent_state_snapshot.py  test_auto_review.py  test_check_references_tool.py  test_edit_groups.py  test_evals.py  test_fake_runner_chat.py  test_handler_sessions.py  test_memory.py  test_model_factory.py  test_multiagent.py  test_persistence.py  test_project_root.py  test_propose_edit_group_tool.py  test_protocol.py  test_protocol_lifecycle.py  test_read_file_overlay.py  test_reference_check.py  test_review_handlers.py  test_search_references.py  test_session_store.py  test_session_title.py  test_settings_models.py  test_strands_community_tools.py  test_strands_plugins.py  test_strands_runner.py  test_stream_events.py  test_subagents.py  (+5 more)
docs/: ui.md  (+13 more)
(+316 files in other folders)
