[project]
name = "writing-agent"
version = "0.1.0"
description = "Writing Agent WebSocket server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "websockets>=13.0",
    "python-dotenv>=1.0.0",
    "strands-agents>=1.42.0",
    "pyyaml>=6.0",
    "strands-agents-tools>=0.8.1",
]

[project.scripts]
writing-agent = "main:main"

[tool.pytest.ini_options]
pythonpath = [".", "tests"]
# Default gate is deterministic: live-LLM / live-server integration tests are
# opt-in via `uv run pytest -m integration`.
addopts = "-m 'not integration'"
markers = [
    "integration: live WebSocket server and/or live model required",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
